--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <link rel="stylesheet" href="reset.css">
     </head>
     <body>
-  <h1> alurabooks</h1>
-
+  <header class="cabeçalho">
+  <span class="cabeçalho__menu-hamburguer"></span>
+  <img src="img/Logo.svg"logo da alurabooks">
+  <a href="#"><img src="img/Favoritos.svg"></a>
+  <a href="#"><img src="img/Sacola.svg"></a>
+  <a href="#"><img src="img/Usuario.svg"></a>
 </body>
 </html>
