--- a/index.html
+++ b/index.html
@@ -9,11 +9,43 @@
         <link rel="stylesheet" href="reset.css">
     </head>
     <body>
+
   <header class="cabeçalho">
-  <span class="cabeçalho__menu-hamburguer"></span>
-  <img src="img/Logo.svg"logo da alurabooks">
-  <a href="#"><img src="img/Favoritos.svg"></a>
-  <a href="#"><img src="img/Sacola.svg"></a>
-  <a href="#"><img src="img/Usuario.svg"></a>
+    <div class="container">
+      <input type="checkbox" id="menu" class="container__botao">
+      <label for="menu">
+  <span class="cabeçalho__menu-hamburguer container__imagem "></span>
+
+      </label> 
+      <ul class="lista-menu">
+<li class="lista-menu__titulo">categorias</li>
+<li class="lista-menu__item">
+  <a href="#" class="lista-menu__link">programaçao</a>
+</li>
+
+<li class="lista-menu__item">
+  <a href="#" class="lista-menu__link"><front-end</a>
+</li>
+
+  <li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">infraestrutura</a>
+  </li>
+
+  <li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">business</a>
+  </li>
+
+  <li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">design & UX</a>
+  </li>    
+      </ul>
+
+  <img src="img/Logo.svg" alt="logo alurabooks" class="container__imagem">
+    </div>
+    <div class="container">
+  <a href="#"><img src="img/Favoritos.svg" alt="meus Favoritos" class="container__imagem"></a>
+  <a href="#"><img src="img/Sacola.svg" alt="carrinho de compras" class="container__imagem"></a>
+  <a href="#"><img src="img/Usuario.svg" alt="meu perfil" class="container__imagem"></a>
+    </div>
 </body>
 </html>
