--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> alurabooks  </title>
-        <link rel="stylesheet" href="styles.css">
-    
         <link rel="stylesheet" href="reset.css">
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
+       
+
     </head>
     <body>
 
@@ -14,9 +19,10 @@
     <div class="container">
       <input type="checkbox" id="menu" class="container__botao">
       <label for="menu">
-  <span class="cabeçalho__menu-hamburguer container__imagem "></span>
+  <span class="cabeçalho__menu-hamburguer container__imagem"></span>
 
-      </label> 
+ 
+</label> 
       <ul class="lista-menu">
 <li class="lista-menu__titulo">categorias</li>
 <li class="lista-menu__item">
@@ -26,7 +32,6 @@
 <li class="lista-menu__item">
   <a href="#" class="lista-menu__link"><front-end</a>
 </li>
-
   <li class="lista-menu__item">
     <a href="#" class="lista-menu__link">infraestrutura</a>
   </li>
